--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
 <title> Facebook</title>
-<link rel="stylesheet" href="Facebook.css" text="text/css"/>
+<link rel="stylesheet" href="style.css" text="text/css"/>
 <link rel="stylesheet" href="Responsive.css" text="text/css"/>
 
 
